# tsc-py

./: AGENTS.md  README.md  pyproject.toml
templates/: cpp-headers.j2  py-dataclasses.j2
tests/: test_generated_cpp.py
typespec_parser/: cli.py  parser.py
