[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsc-py"
version = "0.1.1"
description = "A TypeSpec parser that generates Python dataclasses"
readme = "README.md"
authors = [{name = "Arun Sharma", email = "arun@sharma-home.net"}]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "dataclasses; python_version < '3.7'",
    "jinja2>=3.1.6",
    "parsimonious>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0.0",
]

[project.urls]
Homepage = "https://github.com/adsharma/tsc-py"

[project.scripts]
tsc-py = "typespec_parser.cli:main"

[tool.setuptools.packages.find]
exclude = ["templates"]

[tool.isort]
profile = "black"
